fix nav on mobile and force ssl

--- a/app/assets/stylesheets/components/_contact_form.scss
+++ b/app/assets/stylesheets/components/_contact_form.scss
@@ -1,5 +1,6 @@
 .contact-form {
   color: white;
+  font-size: 15px;
   .contact-form-group label {
     margin-bottom: 10px;
   }
