--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -183,3 +183,11 @@ ul.list-inline-flex {
     font-weight: 800;
   }
 }
+
+@media (max-width: 330px) {
+  .nav-mobile {
+    font-size: 15px;
+  }
+}
+
+
